--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-__pycache__/
-.idea/
-.vscode/
+__pycache__
+.idea
+.vscode
 data/raw/pron_data/
 data/processed/*articles*
+data/processed/g2p*
 data/modeling/*vectors*
-.DS_Store/
+data/modeling/g2p_model*
+**/.DS_Store
+g2p
